--- a/main.html
+++ b/main.html
@@ -8,6 +8,19 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Why I want to become a developer? </h1>
+	<p>As a software developer, I am driven by a deep passion for technology and a desire to create meaningful solutions that can impact people's lives. There are several motivations behind my choice to pursue a career in software development:
+Firstly, I am fascinated by the power of software to solve complex problems and improve efficiency. The ability to write code that can automate tasks, analyze data, and build innovative applications is incredibly empowering. I see software development as a way to bring ideas to life and make a tangible difference in various industries.
+
+Secondly, the ever-evolving nature of the field excites me. Technology is constantly advancing, and software developers are at the forefront of this progress. There is always something new to learn, whether it's a new programming language, framework, or development methodology. This constant challenge keeps me motivated and ensures that I am continually growing both personally and professionally.
+
+Additionally, I find great satisfaction in the collaborative aspect of software development. Building software often requires working in teams, brainstorming ideas, and solving problems together. I enjoy the process of collaborating with fellow developers, designers, and stakeholders to create robust and user-friendly applications.
+
+Moreover, software development offers immense versatility and flexibility. It allows me to work on a wide range of projects, from web development to mobile applications, from data analysis to artificial intelligence. This versatility keeps my work engaging and provides opportunities for me to explore different areas of interest.
+
+Lastly, I believe that software has the potential to make a positive impact on society. From improving healthcare systems to enhancing educational platforms, software can revolutionize the way we live and interact with the world. As a software developer, I aspire to contribute to these advancements and be part of a community that uses technology to drive positive change.
+
+In conclusion, my motivations as a software developer stem from my passion for technology, the constant learning opportunities, the collaborative nature of the field, the versatility it offers, and the potential to make a positive impact. I am excited about the journey ahead and look forward to bringing my ideas to life through software development.</p>
     <script type="text/javascript" src="./script.js">
 </script>
 
