--- a/main.html
+++ b/main.html
@@ -9,9 +9,8 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<h1>Why I want to become a developer?</h1>
-	<p>As a software developer, I am driven by a deep passion for technology and a desire to create meaningful solutions that can impact people's lives. There are several motivations behind my choice to pursue a career in software development:
-Firstly, I am fascinated by the power of software to solve complex problems and improve efficiency. The ability to write code that can automate tasks, analyze data, and build innovative applications is incredibly empowering. I see software development as a way to bring ideas to life and make a tangible difference in various industries.</p>
-    <script type="text/javascript" src="./script.js">
+	<p>Meri Mrzi</p>
+	<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
